[package]
name = "cred"
version = "0.1.0"
edition = "2021"
description = "YubiKey-encrypted credential manager with HTTP daemon and agent key auth"
license = "Elastic-2.0"
repository = "https://codeberg.org/GhostFrame/cred-public"

[[bin]]
name = "cred"
path = "src/main.rs"

[[bin]]
name = "credd"
path = "src/server.rs"

[[bin]]
name = "cred-gui"
path = "src/gui.rs"

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# http client (backend API calls)
reqwest = { version = "0.12", features = ["json", "cookies", "blocking"] }

# http server (credd)
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# cli
clap = { version = "4", features = ["derive"] }

# tui
ratatui = "0.29"
crossterm = "0.28"

# gui
eframe = { version = "0.31", features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "0.31"

# crypto & encoding
base64 = "0.22"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }

# password prompt
rpassword = "5"

# time
chrono = { version = "0.4", features = ["serde"] }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# errors
anyhow = "1"
thiserror = "2"

# sqlite backend
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
